CON: Adds tcp client

--- a/metatrader-connector/templates/index.html
+++ b/metatrader-connector/templates/index.html
@@ -58,6 +58,10 @@
             </td>
             <td>
                 <button onclick="sortTable('IdTable', 1);" style="background-color: rgb(233, 116, 7);">
+                    Sort by Atr</button>
+            </td>
+            <td>
+                <button onclick="sortTable('IdTable', 2);" style="background-color: rgb(233, 116, 7);">
                     Sort by Change</button>
             </td>
         </tr>
