--- a/metatrader-connector/frontend/src/App.css
+++ b/metatrader-connector/frontend/src/App.css
@@ -18,7 +18,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: initial;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
