--- a/metatrader-connector/frontend/src/index.css
+++ b/metatrader-connector/frontend/src/index.css
@@ -80,3 +80,25 @@ th {
 .mystyle th:hover {
   background: rgb(154, 9, 164);
 }
+
+.clsGlobalContainer {
+  font-size: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.clsSymbolsContainer {
+  display: inline-block;
+  vertical-align: top;
+  width: 50%
+}
+
+.clsTraderTable {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 14pt;
+  width: 50%;
+  border: #1974ca;
+  border-style: solid;
+  border-width: 2pt;
+}
