--- a/metatrader-connector/frontend/src/index.css
+++ b/metatrader-connector/frontend/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
@@ -47,38 +48,58 @@ button {
   text-align: left;
 }
 
+.orangebutton:hover {
+  background-color: #effff000;
+  color: white;
+}
 
-.mystyle {
+
+.orangebutton {
+  background-color: rgb(226, 84, 8);
+  font-style: italic;
+  border: 2px;
+  transition-duration: 0.4s;
+  border-style: double;
+  border-color: rgb(255, 85, 0);
+}
+
+.clsStyle {
   font-size: 11pt;
   font-family: Arial;
   border-collapse: collapse;
   border: 1px solid silver;
   text-align: left;
   width: fit-content;
+
 }
 
-.mystyle td,
+.clsStyle input {
+
+  color: azure;
+}
+
+.clsStyle td,
 th {
   padding: 5px;
   border: 1px solid silver;
 }
 
-.mystyle tr:nth-child(even) {
+.clsStyle tr:nth-child(even) {
   background: #1974ca;
 }
 
-.mystyle tr:hover {
+.clsStyle tr:hover {
   background: rgb(115, 42, 0);
   cursor: pointer;
 }
 
-.mystyle th {
+.clsStyle th {
   font-style: italic;
   font-weight: bold;
   background-color: blueviolet;
 }
 
-.mystyle th:hover {
+.clsStyle th:hover {
   background: rgb(154, 9, 164);
 }
 
@@ -102,4 +123,49 @@ th {
   border: #1974ca;
   border-style: solid;
   border-width: 2pt;
+}
+
+.input-wrapper {
+  position: relative;
+  font-size: small;
+  border: 1px solid gray;
+  border-radius: 2px;
+  display: flex;
+}
+
+input {
+  line-height: 6ex;
+  color: white;
+  background-color: #effff000;
+  border-width: 0px #effff000 none;
+  width: 60%;
+  text-align: left;
+}
+
+.orangeTag {
+  position: relative;
+  background-color: orange;
+  color: black;
+  font-size: large;
+  margin: 1px;
+  width: 40%;
+}
+
+.redTag {
+  position: relative;
+  background-color: rgb(177, 22, 22);
+  color: black;
+  font-size: large;
+  margin: 1px;
+  width: 40%;
+}
+
+
+.blueTag {
+  position: relative;
+  background-color: rgb(12, 146, 255);
+  color: black;
+  font-size: large;
+  margin: 1px;
+  width: 40%;
 }
