--- a/metatrader-connector/frontend/src/index.css
+++ b/metatrader-connector/frontend/src/index.css
@@ -120,6 +120,10 @@ th {
   border-width: 2pt;
 }
 
+.clsTraderTable td {
+  padding: 10px;
+}
+
 .input-wrapper {
   position: relative;
   font-size: small;
