--- a/metatrader-connector/frontend/src/index.css
+++ b/metatrader-connector/frontend/src/index.css
@@ -94,15 +94,31 @@ th {
   width: 50%
 }
 
-.clsTraderTable {
+.clsTraderContainer {
   display: inline-block;
   vertical-align: top;
   font-size: 14pt;
   width: 50%;
+}
+
+.clsTraderTable {
+  vertical-align: top;
+  font-size: 14pt;
   border: #1974ca;
   border-style: solid;
   border-width: 2pt;
+  margin: 10px
 }
+
+.clsPositionsTable {
+  vertical-align: top;
+  font-size: 14pt;
+  border: #ff5100;
+  border-style: solid;
+  border-width: 2pt;
+  margin: 10px
+}
+
 
 .clsTraderTable td {
   padding: 10px;
