--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -38,56 +38,12 @@ button {
   background-color: rgb(226, 84, 8);
 }
 
-.clsStyle {
-  font-size:12pt;
-  font-family: 'Consolas';
-  border-collapse: collapse;
-  width: fit-content;
-  font-style: italic;
-  cursor: pointer;
+
+.clsBorderless td:nth-child(8),
+.clsBorderless td:nth-child(9){
+  background-color:#3410ff53
 }
 
-.clsStyle input {
-  color: azure;
-}
-
-.clsStyle td {
-  padding: 0px 5px 5px 0px;
-}
-
-.clsStyle th {
-  background-color: blueviolet;
-  border: 2px;
-  border-color: aliceblue;
-}
-.clsStyle td:nth-child(1)
-{
-  font-weight: bold;
-  border: 1px solid rgb(136, 150, 244);
-}
-
-
-.clsStyle td:nth-child(8),
-.clsStyle td:nth-child(9){
-  border: 1px solid rgb(19, 169, 199);
-}
-
-.clsStyle tr:nth-child(even) {
-  background: #2c0101;
-}
-
-.clsStyle tr:nth-child(odd) {
-  background: #000000;
-}
-
-.clsStyle tr:hover {
-  background: rgb(115, 42, 0);
-  cursor: pointer;
-}
-
-.clsStyle th:hover {
-  background: rgb(154, 9, 164);
-}
 
 .clsBorderless th
 {
@@ -100,7 +56,7 @@ button {
 }
 
 .clsBorderless tr:hover {
-  background: rgb(115, 42, 0);
+  background: rgba(255, 255, 255, 0.048);
   cursor: pointer;
 }
 
