--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -32,6 +32,10 @@ button {
   background-color: red;
 }
 
+.css-orange-background {
+  background-color: #e6520e !important;
+}
+
 .css-blue-button {
   background-color: rgb(0, 187, 255) !important; 
   color: #000000;
